Fixed Spacing Issues

--- a/style.css
+++ b/style.css
@@ -72,7 +72,8 @@ section {
     border: 4px ridge white;
     border-radius: 25px;
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
-    margin: 0px 500px;
+    max-width: 800px;
+    margin: auto;
     text-align: center;
     padding: 10px;
     backdrop-filter: blur(5px);
@@ -113,6 +114,7 @@ section {
 
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: 20px;
